# Disciplr-backend

./: .env.example  PRIVACY.md  jest.config.cjs  jest.config.ts  jest.setup.cjs  package-lock.json  package.json
contracts/: README.md
contracts/accountability_vault/: Cargo.toml
contracts/accountability_vault/src/: lib.rs  test.rs
data/: disciplr.db  disciplr.db-shm  disciplr.db-wal
db/migrations/: 20260227000000_fix_vault_schema.cjs  20260328100000_add_performance_indexes.cjs
docs/: ADMIN_USER_MANAGEMENT_API.md  SECURITY_INTEGRATION_TESTS.md  TRANSACTION_API.md  VAULT_API.md  auth.md  event-processing.md  field-encryption.md  pr-batched-event-ingest.md  privacy-logging.md  security-ci.md  webhook-integration-guide.md  webhooks.md
prisma/: schema.prisma
src/: app-bootstrap.ts  app.ts  index.ts
src/config/: env.ts  horizonListener.ts  index.ts
src/db/: database.ts  index.ts
src/jobs/: handlers.ts  system.ts  types.ts
src/lib/: audit-logs.ts  encryption.ts  validation.ts
src/middleware/: auth.ts  errorHandler.ts  notFound.ts  oauthBearer.ts  orgAuth.ts  rbac.ts  requireJson.ts
src/repositories/: milestoneRepository.ts  transactionRepository.test.ts  webhookSubscriberRepository.ts
src/routes/: admin.ts  adminVerifiers.ts  adminWebhooks.ts  analytics.milestones.test.ts  analytics.ts  apiKeys.ts  auth.ts  enterpriseExposure.test.ts  enterpriseRoutes.ts  exports.test.ts  exports.ts  health.ts  metrics.ts  oauth.ts  orgMembers.ts  (+3 more)
tests/: admin.test.ts  adminVerifiers.crud.test.ts  membership.test.ts  security.integration.test.ts  vaults.test.ts
(+68 files in other folders)
