[package]
name = "accountability_vault"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Expose testutils as an optional feature so the fuzz crate can enable it
# without making it a mandatory dependency of the main library.
[features]
testutils = ["soroban-sdk/testutils"]

[lints]
workspace = true

[profile.release]
opt-level = "z"
overflow-checks = true
lto = true
codegen-units = 1
